# deer-flow

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  agent-orchestrator.yaml  code_review.md  extensions_config.example.json  install-runtime.sh  install.sh  start-dev.bat  start-services.bat  start-services.sh  stop-services.bat  stop-services.sh  workflow状态反馈与最终汇总优化方案.md  多智能体兼容改造分阶段实施方案.md  多智能体架构技术路线说明书.md  多智能体架构改造实现方案.md  多智能体测试文档.md  多智能体阶段0-2测试执行说明.md  当前多智能体实现说明.md  当前项目架构详细说明文档.md  轻量完整服务启动说明.md
backend/: CLAUDE.md  README.md  langgraph.json  pyproject.toml  test_multi_agent.py
backend/.deer-flow/: .gitignore
backend/benchmark_reports/: report_phase0-core.json  report_phase0-core.md
backend/benchmarks/: README.md
backend/docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  MCP_SERVER.md  PATH_EXAMPLES.md  README.md  RUNTIME_HOOKS.md  SETUP.md  TODO.md  langgraph_channel_probes.md  plan_mode_usage.md
backend/scripts/: _probe_channels.py  probe_lg_channels.py  probe_local_pregel.py
backend/src/: client.py
backend/tests/: conftest.py  test_admin_router.py  test_admin_router_regression.py  test_agent_sync_validation.py  test_build_time_hooks.py  test_capability_profiles.py  test_clarification_middleware.py  test_client.py  test_concurrent_isolation.py  test_concurrent_scheduler.py  test_config_lock.py  test_cross_user_thread_403.py  test_custom_agent.py  test_dangling_tool_call_middleware.py  test_docker_sandbox_mode_detection.py  test_engine_registry.py  test_entry_graph_routing.py  test_evals.py  test_executor_governance_identity.py  test_executor_intervention_normalization.py  test_executor_outcome.py  test_executor_resume.py  test_executor_structured_outcome.py  test_governance_api.py  test_governance_audit_hooks.py  test_governance_engine.py  test_governance_ledger.py  test_governance_middleware_integration.py  test_governance_policy.py  test_governance_types.py  test_guardrails.py  test_help_request_builder.py  test_helper_scope.py  test_hint_extractor_registry.py  test_hr_mcp_server.py  test_identity_guard.py  test_intervention_clarification_resume.py  (+70 more)
(+442 files in other folders)
