[project]
name = "deer-flow"
version = "0.1.0"
description = "LangGraph-based AI agent system with sandbox execution capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-sandbox>=0.0.19",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "kubernetes>=30.0.0",
    "langchain>=1.2.3",
    "langchain-deepseek>=1.0.1",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=1.1.7",
    # ── LangGraph channel constraint (since LG 0.6 / langgraph-api 0.7.x) ──
    # Remote LangGraph API submits MUST NOT include both non-empty
    # ``config.configurable`` and non-empty ``context`` on the same call.
    # The server rejects with HTTP 400: "Cannot specify both configurable and context".
    # Gateway sends identity via ``context`` only; see
    # ``src/gateway/runtime_service.py::start_stream`` and
    # ``collaboration/features/runtime-lg1x-trusted-context-submit.md``.
    # Local pregel (DeerFlowClient / SubagentExecutor) intentionally keeps
    # the dual ``configurable + context`` channel — do not migrate it.
    # Before bumping these pins, rerun the probe scripts in
    # ``backend/scripts/`` (see ``backend/docs/langgraph_channel_probes.md``).
    "langgraph>=1.0.6",
    "langgraph-api>=0.7.0,<0.8.0",
    "langgraph-cli>=0.4.14",
    "langgraph-runtime-inmem>=0.22.1",
    "markdownify>=1.2.2",
    "markitdown[all,xlsx]>=0.0.1a2",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "readabilipy>=0.3.0",
    "sse-starlette>=2.1.0",
    "tavily-python>=0.7.17",
    "firecrawl-py>=1.15.0",
    "tiktoken>=0.8.0",
    "uvicorn[standard]>=0.34.0",
    "ddgs>=9.10.0",
    "duckdb>=1.4.4",
    "langchain-google-genai>=4.2.1",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
observability = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.14.11"]
